cmake_minimum_required(VERSION 2.6)
project(sensor_models)
add_subdirectory(LucidControl)
add_subdirectory(Simulator)
add_subdirectory(ZBSensor)
IF (BASLER)
  MESSAGE(STATUS "Adding Basler Support")
  add_subdirectory(camera/Basler)
  FILE(REMOVE camera/Basler/UnitServerIgnore)
ELSE()
  FILE(WRITE camera/Basler/UnitServerIgnore "disabled ${PROJECT_NAME}")
ENDIF()
IF (IDS)
  MESSAGE(STATUS "Adding IDS Support")
  add_subdirectory(camera/IDS)
  FILE(REMOVE camera/IDS/UnitServerIgnore)
ELSE()
  FILE(WRITE camera/IDS/UnitServerIgnore "disabled ${PROJECT_NAME}")
ENDIF()
SET(DRIVERS_LIB ${DRIVERS_LIB} PARENT_SCOPE)
